--- a/XJcompanies.html
+++ b/XJcompanies.html
@@ -5,46 +5,50 @@
       <title>Fortune 500 Companies with Operations in Xinjiang</title>
 
 <style>
-        table.sortable thead {
+        table.tableizer-table thead {
             background-color:#eee;
             color:#000000;
             font-weight: bold;
             font-size: 16px;
             cursor: default;
         }
-        table.sortable {
+        table.tableizer-table {
       		font-size: 12px;
-      		font-family: 'Arial';
+      		font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       	}
-        table.sortable {border-spacing: 0}
-       
-        tr:nth-child(even) {background: #e6e6e6}
-        tr:nth-child(odd) {background: #FFF}
+        table.tableizer-table {border-spacing: 0}
+
+        tr:nth-child(odd) {background: #e6e6e6}
+
+        tr:nth-child(even) {background: #FFF}
+
+        tr td:nth-child(3) {text-align: center;}
+
+        td {padding:5px 15px 5px 15px;}
+
+        table.tableizer-table thead th {
+	         padding: 8px;
+	         background-color: #FFF;
+	         font-size: 16px;
+        }
+
       </style>
   </head>
 
   <body>
 
 
-
-
-<table class="sortable">
 <!–– add your tableizer data below this line––>
 
-<thead><tr class="tableizer-firstrow"><th> Company</th><th>Business in Xinjiang</th><th>Fortune 500 Rank</th></tr></thead><tbody>  <col width="20%"><col width="70%"><col width="10%">
- <tr><td>ExxonMobil</td><td>[do we want to include source descriptions/links for each of these?  Like, "According to Chinese corporate websites,"] Sells industrial lubricant to various Xinjiang companies through an agent/distributor (Xinjiang Qingsong Petroleum and Chemical Co. Ltd.).</td><td>2</td></tr>
- <tr><td>GE</td><td>Operates an Urumqi office as well as the joint venture GE Shenhua Gasification Technology Co., Ltd., which provides technology support to Shenhua's coal gas projects in Xinjiang. Also provides equipment and technical support to natural gas transmission. As of September 2018, was soliciting job applications for a Field Service Engineer position in Xinjiang.</td><td>18</td></tr>
- <tr><td>IBM</td><td>In 2012, signed a strategic partnership with the Xinjiang government related to cloud computing, smart cities, electricity, oil & gas equipment, and internet security. As of 2015, worked with China's Environmental Protection Bureau on clean air projects in Xinjiang, and with Xinjiang Goldwind Science and Technology Co., Ltd., on applications related to the Internet of Things, cloud computing, and big data analytics. [I dropped the references from the XJ Academy of Analysis and Testing in favor of the IBM website stuff]</td><td>34</td></tr>
- <tr><td>Dell</td><td>Develops smart city system for Shihezi city. As of August 2018, was soliciting job applications for a sales position in Urumqi.</td><td>35</td></tr>
- <tr><td>DowDuPont (Dow Chemical, DuPont)</td><td>As of 2017, Dow Chemical operated a Xinjiang branch and cooperated with Deland Water Technology Co., Ltd., to provide water treatment solutions in Xinjiang. 2015 material from the DuPont.cn website states that the DuPont cooperated with State Power Investment Corporation and provides photovoltaic materials in Xinjiang solar plants. According to 2004 article by Xinjiang's official state media, Xinjiang TBEA Co., Ltd., was the authorized manufacturer of Dupont's ReliatraN transformer; a 2018 press release suggests that the newly-formed DowDuPont continues to have a relationship with TBEA.</td><td>47</td></tr>
- <tr><td>Cisco</td><td>According to information on the Cisco website and on the Xinjiang Software Park website, Cisco provides products & services to China Mobile Xinjiang Company and Petro China Xinjiang Company. Cisco also conducted a 2009 training for regional leaders in Xinjiang on "information industrialization." [got this last bit from a news clipping Cisco has up on its site]</td><td>62</td></tr>
- <tr><td>Caterpillar</td><td>Sells machinery and parts to Xinjiang through Sime Darby Group. Cooperates with state owned Shenhua Group in coal mine construction in Xinjiang. </td><td>65</td></tr>
- <tr><td>Honeywell</td><td>Since 2011, has operated an office in Urumqi office and provides smart power grids and constructs transportation infrastructure. [also looks to be doing this nice CSR project, do we mention? https://www.honeywell.com/newsroom/pressreleases/2017/08/hon-and-china-environmental-protection-foundation-bring-safe-drinking-water-to-schools-in-china]</td><td>77</td></tr>
- <tr><td>Oracle</td><td>Provides Exadata Database Machine to Urumqi Human Resources and Social Security Bureau and Xinjiang Telecom.</td><td>82</td></tr>
- <tr><td>Coca Cola</td><td>Operates a bottling plant in Urumqi. [I cut the other stuff because they did not confirm (?)]</td><td>87</td></tr>
+<table class="tableizer-table">
+<thead><tr class="tableizer-firstrow"><th>Company</th><th>Business in Xinjiang</th><th>Fortune 500 Rank</th></tr></thead><tbody>
+ <tr><td>ExxonMobil</td><td>     -Sells industrial lubricant to various Xinjiang companies through an agent/distributor</td><td>2</td></tr>
+ <tr><td>GE</td><td>     -Operates an Urumqi office</br>     -In joint venture that provides technology support to certain coal gas projects in Xinjiang Provides equipment and technical support to natural gas transmission</br>     -As of September 2018, was soliciting job applications for a Field Service Engineer position in Xinjiang</td><td>18</td></tr>
+ <tr><td>IBM</td><td>     -In a strategic partnership with Xinjiang government related to cloud computing, smart cities, electricity, oil and gas equipment, and internet security</td><td>34</td></tr>
+ <tr><td>Dell</td><td>     -Developing smart city system for Shihezi city</br>     -Soliciting job applications for a sales position in Urumqi</td><td>35</td></tr>
+ <tr><td>DowDuPont </td><td>     -Operates a Xinjiang branch</br>     -Cooperates with Deland Water Technology Co., Ltd., to provide water treatment solutions in Xinjiang.  </td><td>47</td></tr>
 </tbody></table>
-    
+
 <!–– add your tableizer data above this line––>
 </body>
 </html>
-
