--- a/XJcompanies.html
+++ b/XJcompanies.html
@@ -4,16 +4,18 @@
       <meta charset='utf-8' />
       <title>Fortune 500 Companies with Operations in Xinjiang</title>
 
+
+
 <style>
         table.tableizer-table thead {
             background-color:#eee;
             color:#000000;
             font-weight: bold;
-            font-size: 16px;
+            font-size: 18px;
             cursor: default;
         }
         table.tableizer-table {
-      		font-size: 12px;
+      		font-size: 15px;
       		font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       	}
         table.tableizer-table {border-spacing: 0}
@@ -42,11 +44,11 @@
 
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow"><th>Company</th><th>Business in Xinjiang</th><th>Fortune 500 Rank</th></tr></thead><tbody>
- <tr><td>ExxonMobil</td><td>     -Sells industrial lubricant to various Xinjiang companies through an agent/distributor</td><td>2</td></tr>
- <tr><td>GE</td><td>     -Operates an Urumqi office</br>     -In joint venture that provides technology support to certain coal gas projects in Xinjiang Provides equipment and technical support to natural gas transmission</br>     -As of September 2018, was soliciting job applications for a Field Service Engineer position in Xinjiang</td><td>18</td></tr>
- <tr><td>IBM</td><td>     -In a strategic partnership with Xinjiang government related to cloud computing, smart cities, electricity, oil and gas equipment, and internet security</td><td>34</td></tr>
- <tr><td>Dell</td><td>     -Developing smart city system for Shihezi city</br>     -Soliciting job applications for a sales position in Urumqi</td><td>35</td></tr>
- <tr><td>DowDuPont </td><td>     -Operates a Xinjiang branch</br>     -Cooperates with Deland Water Technology Co., Ltd., to provide water treatment solutions in Xinjiang.  </td><td>47</td></tr>
+ <tr><td>ExxonMobil</td><td>• Sells industrial lubricant to various Xinjiang companies through an agent/distributor</td><td>2</td></tr>
+ <tr><td>GE</td><td>• Operates an Urumqi office</br></br>• In joint venture that provides technology support to certain coal gas projects in Xinjiang Provides equipment and technical support to natural gas transmission</br></br>• As of September 2018, was soliciting job applications for a Field Service Engineer position in Xinjiang</td><td>18</td></tr>
+ <tr><td>IBM</td><td>• In a strategic partnership with Xinjiang government related to cloud computing, smart cities, electricity, oil and gas equipment, and internet security</td><td>34</td></tr>
+ <tr><td>Dell</td><td>• Developing smart city system for Shihezi city</br></br>• Soliciting job applications for a sales position in Urumqi</td><td>35</td></tr>
+ <tr><td>DowDuPont </td><td>• Operates a Xinjiang branch</br></br>• Cooperates with Deland Water Technology Co., Ltd., to provide water treatment solutions in Xinjiang.  </td><td>47</td></tr>
 </tbody></table>
 
 <!–– add your tableizer data above this line––>
