--- a/XJcompanies.html
+++ b/XJcompanies.html
@@ -45,10 +45,58 @@
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow"><th>Company</th><th>Business in Xinjiang</th><th>Fortune 500 Rank</th></tr></thead><tbody>
  <tr><td>ExxonMobil</td><td>• Sells industrial lubricant to various Xinjiang companies through an agent/distributor</td><td>2</td></tr>
- <tr><td>GE</td><td>• Operates an Urumqi office</br></br>• In joint venture that provides technology support to certain coal gas projects in Xinjiang Provides equipment and technical support to natural gas transmission</br></br>• As of September 2018, was soliciting job applications for a Field Service Engineer position in Xinjiang</td><td>18</td></tr>
+ <tr><td>Amazon.com</td><td>• Cooperates with Ego Group Co. to co-invest in an E-commerce industry complex in Korla, Xinjiang</td><td>8</td></tr>
+ <tr><td>General Motors</td><td>• Joint Venture SAIC-GM has authorized Buick and Chevrolet dealer and service stores in Xinjiang</td><td>10</td></tr>
+ <tr><td>Ford Motor</td><td>• Has authorized dealers and service stations in Xinjiang</td><td>11</td></tr>
+ <tr><td>GE</td><td>• Operates an Urumqi office</br></br>• In joint venture that provides technology support to certain coal gas projects in Xinjiang </br></br>• As of September 2018, was soliciting job applications for a Field Service Engineer position in Xinjiang</td><td>18</td></tr>
+ <tr><td>Boeing</td><td>• Operates a service point in Urumqi</td><td>27</td></tr>
  <tr><td>IBM</td><td>• In a strategic partnership with Xinjiang government related to cloud computing, smart cities, electricity, oil and gas equipment, and internet security</td><td>34</td></tr>
  <tr><td>Dell</td><td>• Developing smart city system for Shihezi city</br></br>• Soliciting job applications for a sales position in Urumqi</td><td>35</td></tr>
- <tr><td>DowDuPont </td><td>• Operates a Xinjiang branch</br></br>• Cooperates with Deland Water Technology Co., Ltd., to provide water treatment solutions in Xinjiang.  </td><td>47</td></tr>
+ <tr><td>PepsiCo</td><td>• Lanzhou PepsiCo has a sales office in Urumqi</td><td>45</td></tr>
+ <tr><td>DowDuPont </td><td>• Operates a Xinjiang branch</br></br>• Cooperates with Deland Water Technology Co., Ltd., to provide water treatment solutions in Xinjiang</td><td>47</td></tr>
+ <tr><td>FedEx</td><td>• Has a dropoff location in Urumqi</td><td>50</td></tr>
+ <tr><td>United Technologies</td><td>• Otis Elevator, a busines sunit, sells elevators and provides related services to Xinjiang cities<br></br>• Carrier, a busines sunit, sells air conditioning systems in Urumqi</td><td>52</td></tr>
+ <tr><td>HP</td><td>• Authorizes dozens of distributors of HP products in Xinjiang</td><td>58</td></tr>
+ <tr><td>Cisco</td><td>• Provides products and services to China Mobile Xinjiang Company and Petro China Xinjiang CompanyCisco  </td><td>62</td></tr>
+ <tr><td>• Designs the hard drive used in surveillance cameras manufactured by Hikvision, an Urumqi company that provides surveillance equipment in Xinjiang</td><td>• Sells machinery and parts into Xinjiang through Sime Darby Group -Cooperates with state owned Shenhua Group in coal mine construction in Xinjiang </td><td>65</td></tr>
+ <tr><td>Honeywell</td><td>• Operates an office in Urumqi office and provides smart power grids and constructs transportation infrastructure</td><td>77</td></tr>
+ <tr><td>Oracle</td><td>• Its Exadata Database Machine is used by the Urumqi Human Resources and Social Security Bureau and Xinjiang Telecom</td><td>82</td></tr>
+ <tr><td>Coca Cola</td><td>• Operates a bottling plant in Urumqi</td><td>87</td></tr>
+ <tr><td>Nike</td><td>• Sponsors a Xinjiang basketball team</td><td>89</td></tr>
+ <tr><td>3M</td><td>• Operates a sales office in Urumqi  </td><td>97</td></tr>
+ <tr><td>Abbott Laboratories</td><td>• Sells i-STAT Handheld Blood Analyzers to Xinjiang through an agent/distributor called China Medical Instruments Co. Xinjiang Company</td><td>111</td></tr>
+ <tr><td>Heinz </td><td>• Cooperates with COFCO Tunhe, Ltd., in tomato production in Xinjiang</td><td>114</td></tr>
+ <tr><td>Mondelez International</td><td>• Buys sugar from a Xinjiang company <br></br>• Buys tomato products from a Xinjiang company</td><td>117</td></tr>
+ <tr><td>Eli Lilly</td><td>• Engaged in long-term partnership with a chest hospital in Xinjiang</td><td>129</td></tr>
+ <tr><td>Thermo Fisher </td><td>• Sells DNA sequencing products to Xinjiang through agents/distributors </td><td>144</td></tr>
+ <tr><td>Halliburton</td><td>• Partnered with SPT Energy Group to co-found an oil and gas field service company in Xinjiang </td><td>146</td></tr>
+ <tr><td>Cummins </td><td>• Operates customer service stations in Xinjiang through a joint venture </td><td>149</td></tr>
+ <tr><td>Western Digital</td><td>• Designs the hard drive used in Hikvision, an Urumqi company that manufactures surveillance devices and sells them in Xinjiang.</td><td>158</td></tr>
+ <tr><td>Danaher</td><td>• A subsidiary company sells water quality analytical instruments to Xinjiang oil fields and petroleum and chemical companies </td><td>162</td></tr>
+ <tr><td>AECOM</td><td>• Provides environment evaluation services in Xinjiang <br></br>• Provides infrastructure design in Xinjiang <br></br>• In a joint venture consulting company with a Urumqi office that provides services in Xinjiang</td><td>164</td></tr>
+ <tr><td>Synnex</td><td>• Provides supply chain solutions to a Xinjiang automotive parts company</td><td>169</td></tr>
+ <tr><td>Emerson</td><td>• Operates an Urumqi office -Provides intelligent monitoring of wellheads to PetroChina Xinjiang Oil Field Company's Kelameili gas fields</td><td>178</td></tr>
+ <tr><td>General Mills</td><td>• Operates a Häagen-Dazs store in Urumqi</td><td>182</td></tr>
+ <tr><td>Goodyear Tire and Rubber</td><td>• Operates a flagship store in Urumqi</td><td>187</td></tr>
+ <tr><td>Land O'Lakes, Inc.</td><td>• Cooperates with the Xinjiang Academy of Animal Sciences in forage grass production</td><td>216</td></tr>
+ <tr><td>Estee Lauder</td><td>• Operates several retail stores in Urumqi</td><td>258</td></tr>
+ <tr><td>Tesla</td><td>• Operates destination charging stations in Urumqi</td><td>260</td></tr>
+ <tr><td>Xerox</td><td>• Joint venture Fuji-Xerox has a sales and service office in Urumqi</td><td>291</td></tr>
+ <tr><td>Conagra Brands</td><td>• Conagra operates a joint venture that processes tomatoes harvested from Xinjiang</td><td>321</td></tr>
+ <tr><td>Hilton</td><td>• Operates a Hilton hotel in Urumqi</td><td>324</td></tr>
+ <tr><td>PVH</td><td>• In a joint venture that operates, or at least authorizes, multiple Tommy Hilfiger and Calvin Klein retail stores in Xinjiang</td><td>332</td></tr>
+ <tr><td>Avis Budget Group</td><td> • Operates multiple stores in Xinjiang via a joint venture</td><td>333</td></tr>
+ <tr><td>Vertiv</td><td>• Provides power, thermal, and infrastructure services to China Mobile Xinjiang</td><td>346</td></tr>
+ <tr><td>AGCO</td><td>• Sells agricultural machinery to Xinjiang through an agent/distributor</td><td>347</td></tr>
+ <tr><td>Campbell Soup</td><td>• Buys tomato products from COFCO Tunhe in Xinjiang</td><td>358</td></tr>
+ <tr><td>Mosaic</td><td>• Cooperates with a state-owned company to sell fertilizer products in Xinjiang </td><td>382</td></tr>
+ <tr><td>Yum China Holdings</td><td>• Operates KFC and Pizza Hut restaurants in Xinjiang</td><td>397</td></tr>
+ <tr><td>Fortive</td><td>• Fluke, a subsidiary, operates a Xinjiang sales company</td><td>420</td></tr>
+ <tr><td>Motorola Solutions</td><td>• Provides radio system to the Xinjiang Ministry of Forests</td><td>443</td></tr>
+ <tr><td>Rockwell</td><td>• Sells products into Xinjiang through an agent/distributor</td><td>445</td></tr>
+ <tr><td>Wyndham Hotels & Resorts</td><td>• Operates Super 8 Motels in Urumqi</td><td>479</td></tr>
+ <tr><td>Avon Products</td><td>• Has an Urumqi branch company</td><td>485</td></tr>
+ <tr><td>Peabody Energy</td><td>• Cooperates with the Xinjiang government to develop coal mines and build coal trading platforms, power plants, and gas station equipment</td><td>491</td></tr>
 </tbody></table>
 
 <!–– add your tableizer data above this line––>
