--- a/XJcompanies.html
+++ b/XJcompanies.html
@@ -42,6 +42,23 @@
 
 <!–– add your tableizer data below this line––>
 
+<style type="text/css">
+	table.tableizer-table {
+		font-size: 12px;
+		border: 1px solid #CCC; 
+		font-family: Arial, Helvetica, sans-serif;
+	} 
+	.tableizer-table td {
+		padding: 4px;
+		margin: 3px;
+		border: 1px solid #CCC;
+	}
+	.tableizer-table th {
+		background-color: #104E8B; 
+		color: #FFF;
+		font-weight: bold;
+	}
+</style>
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow"><th>Company</th><th>Business in Xinjiang</th><th>Fortune 500 Rank</th></tr></thead><tbody>
  <tr><td>ExxonMobil</td><td>• Sells industrial lubricant to various Xinjiang companies through an agent/distributor</td><td>2</td></tr>
@@ -58,7 +75,6 @@
  <tr><td>United Technologies</td><td>• Otis Elevator, a busines sunit, sells elevators and provides related services to Xinjiang cities<br></br>• Carrier, a busines sunit, sells air conditioning systems in Urumqi</td><td>52</td></tr>
  <tr><td>HP</td><td>• Authorizes dozens of distributors of HP products in Xinjiang</td><td>58</td></tr>
  <tr><td>Cisco</td><td>• Provides products and services to China Mobile Xinjiang Company and Petro China Xinjiang CompanyCisco  </td><td>62</td></tr>
- <tr><td>• Designs the hard drive used in surveillance cameras manufactured by Hikvision, an Urumqi company that provides surveillance equipment in Xinjiang</td><td>• Sells machinery and parts into Xinjiang through Sime Darby Group -Cooperates with state owned Shenhua Group in coal mine construction in Xinjiang </td><td>65</td></tr>
  <tr><td>Honeywell</td><td>• Operates an office in Urumqi office and provides smart power grids and constructs transportation infrastructure</td><td>77</td></tr>
  <tr><td>Oracle</td><td>• Its Exadata Database Machine is used by the Urumqi Human Resources and Social Security Bureau and Xinjiang Telecom</td><td>82</td></tr>
  <tr><td>Coca Cola</td><td>• Operates a bottling plant in Urumqi</td><td>87</td></tr>
