--- a/XJcompanies.html
+++ b/XJcompanies.html
@@ -74,7 +74,7 @@
  <tr><td>FedEx</td><td>• Has a dropoff location in Urumqi</td><td>50</td></tr>
  <tr><td>United Technologies</td><td>• Otis Elevator, a busines sunit, sells elevators and provides related services to Xinjiang cities<br></br>• Carrier, a busines sunit, sells air conditioning systems in Urumqi</td><td>52</td></tr>
  <tr><td>HP</td><td>• Authorizes dozens of distributors of HP products in Xinjiang</td><td>58</td></tr>
- <tr><td>Cisco</td><td>• Provides products and services to China Mobile Xinjiang Company and Petro China Xinjiang CompanyCisco  </td><td>62</td></tr>
+ <tr><td>Cisco</td><td>• Provides products and services to China Mobile Xinjiang Company and Petro China Xinjiang Company  </td><td>62</td></tr>
  <tr><td>Honeywell</td><td>• Operates an office in Urumqi office and provides smart power grids and constructs transportation infrastructure</td><td>77</td></tr>
  <tr><td>Oracle</td><td>• Its Exadata Database Machine is used by the Urumqi Human Resources and Social Security Bureau and Xinjiang Telecom</td><td>82</td></tr>
  <tr><td>Coca Cola</td><td>• Operates a bottling plant in Urumqi</td><td>87</td></tr>
