--- a/XJcompanies.html
+++ b/XJcompanies.html
@@ -60,7 +60,7 @@
 	}
 </style>
 <table class="tableizer-table">
-<thead><tr class="tableizer-firstrow"><th>Company</th><th>Business in Xinjiang</th><th>Fortune 500 Rank</th></tr></thead><tbody>
+<thead><tr class="tableizer-firstrow"><th>Company</th><th>Business in Xinjiang</th><th>F500 Rank</th></tr></thead><tbody>
  <tr><td>ExxonMobil</td><td>• Sells industrial lubricant to various Xinjiang companies through an agent/distributor</td><td>2</td></tr>
  <tr><td>Amazon.com</td><td>• Cooperates with Ego Group Co. to co-invest in an E-commerce industry complex in Korla, Xinjiang</td><td>8</td></tr>
  <tr><td>General Motors</td><td>• Joint Venture SAIC-GM has authorized Buick and Chevrolet dealer and service stores in Xinjiang</td><td>10</td></tr>
@@ -94,7 +94,7 @@
  <tr><td>Emerson</td><td>• Operates an Urumqi office -Provides intelligent monitoring of wellheads to PetroChina Xinjiang Oil Field Company's Kelameili gas fields</td><td>178</td></tr>
  <tr><td>General Mills</td><td>• Operates a Häagen-Dazs store in Urumqi</td><td>182</td></tr>
  <tr><td>Goodyear Tire and Rubber</td><td>• Operates a flagship store in Urumqi</td><td>187</td></tr>
- <tr><td>Land O'Lakes, Inc.</td><td>• Cooperates with the Xinjiang Academy of Animal Sciences in forage grass production</td><td>216</td></tr>
+ <tr><td>Land O'Lakes</td><td>• Cooperates with the Xinjiang Academy of Animal Sciences in forage grass production</td><td>216</td></tr>
  <tr><td>Estee Lauder</td><td>• Operates several retail stores in Urumqi</td><td>258</td></tr>
  <tr><td>Tesla</td><td>• Operates destination charging stations in Urumqi</td><td>260</td></tr>
  <tr><td>Xerox</td><td>• Joint venture Fuji-Xerox has a sales and service office in Urumqi</td><td>291</td></tr>
@@ -110,7 +110,7 @@
  <tr><td>Fortive</td><td>• Fluke, a subsidiary, operates a Xinjiang sales company</td><td>420</td></tr>
  <tr><td>Motorola Solutions</td><td>• Provides radio system to the Xinjiang Ministry of Forests</td><td>443</td></tr>
  <tr><td>Rockwell</td><td>• Sells products into Xinjiang through an agent/distributor</td><td>445</td></tr>
- <tr><td>Wyndham Hotels & Resorts</td><td>• Operates Super 8 Motels in Urumqi</td><td>479</td></tr>
+ <tr><td>Wyndham Hotels and Resorts</td><td>• Operates Super 8 Motels in Urumqi</td><td>479</td></tr>
  <tr><td>Avon Products</td><td>• Has an Urumqi branch company</td><td>485</td></tr>
  <tr><td>Peabody Energy</td><td>• Cooperates with the Xinjiang government to develop coal mines and build coal trading platforms, power plants, and gas station equipment</td><td>491</td></tr>
 </tbody></table>
