--- a/XJcompanies.html
+++ b/XJcompanies.html
@@ -62,7 +62,7 @@
  <tr><td>Ford Motor</td><td>• Has authorized dealers and service stations in Xinjiang</td><td>11</td></tr>
  <tr><td>GE</td><td>• Operates an Urumqi office</br></br>• In a joint venture that provides technology support to certain coal gas projects in Xinjiang</br></br>• As of September 2018, was soliciting job applications for a Field Service Engineer position in Xinjiang</td><td>18</td></tr>
  <tr><td>Boeing</td><td>• Operates a service point in Urumqi</td><td>27</td></tr>
- <tr><td>Citigroup</td><td>• Citigroup Global Markets Asia owns a minority stake in a securities joint venture with a presence in Xinjiang</td><td>32</td></tr>
+ <tr><td>Citigroup</td><td>• Citigroup Global Markets Asia owns a minority stake in a securities joint venture with a presence in Xinjiang</br></br>• James Griffiths, a spokesperson, made the following statement to ChinaFile: "As I sad [sic] it is factually correct Citi has no office in xianjiang [sic] so please make that clear alongside the rep office of of [sic] our JV partner."</td><td>32</td></tr>
  <tr><td>Dell</td><td>• Developing a smart city system for Shihezi city</br></br>• Soliciting job applications for a sales position in Urumqi</td><td>35</td></tr>
  <tr><td>PepsiCo</td><td>• Lanzhou PepsiCo has a sales office in Urumqi</td><td>45</td></tr>
  <tr><td>DowDuPont </td><td>• Operates a Xinjiang branch</br></br>• Cooperates with Deland Water Technology Co., Ltd., to provide water treatment solutions in Xinjiang</td><td>47</td></tr>
