--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -727,6 +727,17 @@
       <td>Henan</td>
     </tr>
     <tr>
+      <td>China Star Light Charity Fund Association</td>
+      <td>中国星火基金会</td>
+      <td>Zhejiang Department of Civil Affairs</td>
+      <td>浙江省民政厅</td>
+      <td>Hong Kong</td>
+      <td>Civil Society Capacity-Building, Disaster Relief</td>
+      <td>Zhejiang</td>
+      <td>2018-09-19</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Tibet, Xinjiang, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>China-Britain Business Council (Beijing)</td>
       <td>英中贸易协会</td>
       <td>Beijing Commission of Commerce</td>
@@ -3851,6 +3862,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>State Legislative Leaders Foundation</td>
+      <td>州立法领袖基金会</td>
+      <td>Chinese People’s Association for Friendship with Foreign Countries</td>
+      <td>中国人民对外友好协会</td>
+      <td>United States</td>
+      <td>International Relations/Exchange, Law and Governance</td>
+      <td>Beijing</td>
+      <td>2018-09-26</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Stiftung Mercator</td>
       <td>墨卡托基金会</td>
       <td>Ministry of Civil Affairs</td>
@@ -4520,6 +4542,17 @@
       <td>Guizhou</td>
       <td>2017-04-10</td>
       <td>Guizhou</td>
+    </tr>
+    <tr>
+      <td>World Vision (Hebei)</td>
+      <td>世界宣明会-中国基金有限公司</td>
+      <td>Hebei Department of Civil Affairs</td>
+      <td>河北省民政厅</td>
+      <td>Hong Kong</td>
+      <td>Civil Society Capacity-Building, Disabilities, Disaster Relief, Migrants, Poverty Alleviation, Rural Issues/Development, Urban Issues/Development, Youth</td>
+      <td>Hebei</td>
+      <td>2018-09-14</td>
+      <td>Hebei</td>
     </tr>
     <tr>
       <td>World Vision (Jiangxi)</td>
