--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1574,6 +1574,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Global Chinese General Chamber of Commerce</td>
+      <td>全球华人联合总商会</td>
+      <td>Guangdong Department of Commerce</td>
+      <td>广东省商务厅</td>
+      <td>Hong Kong</td>
+      <td>Aging, Arts and Culture, Disabilities, Environment, Gender Issues, International Relations/Exchange, Trade, Youth</td>
+      <td>Guangdong</td>
+      <td>2018-10-08</td>
+      <td>Beijing, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Henan, Hubei, Hunan, Jiangsu, Jiangxi, Liaoning, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Global Volunteers</td>
       <td>环球志愿者</td>
       <td>Shaanxi Department of Education</td>
@@ -1891,6 +1902,17 @@
       <td>Beijing</td>
       <td>2017-01-23</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Federation of Youth Groups</td>
+      <td>香港青年协会</td>
+      <td>Guangdong Youth Federation</td>
+      <td>广东省青年联合会</td>
+      <td>Hong Kong</td>
+      <td>Civil Society Capacity-Building, International Relations/Exchange, Youth</td>
+      <td>Guangdong</td>
+      <td>2018-09-29</td>
+      <td>Guangdong</td>
     </tr>
     <tr>
       <td>Hong Kong Institute of Chartered Secretaries</td>
