--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -958,6 +958,17 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Colleges and Institutes Canada</td>
+      <td>加拿大应用技术与职业学院协会</td>
+      <td>Guangdong Department of Education</td>
+      <td>广东省教育厅</td>
+      <td>Canada</td>
+      <td>Education, International Relations/Exchange</td>
+      <td>Guangdong</td>
+      <td>2018-10-24</td>
+      <td>Guangdong</td>
+    </tr>
+    <tr>
       <td>Colombian Coffee Growers Federation (FNC)</td>
       <td>哥伦比亚国家咖啡生产者协会</td>
       <td>Beijing Commission of Commerce</td>
@@ -2630,6 +2641,17 @@
       <td>Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hebei, Heilongjiang, Henan, Hubei, Jiangsu, Jilin, Liaoning, Shaanxi, Shandong, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Korea Federation of SME Fusion</td>
+      <td>韩国中小企业融合中央会</td>
+      <td>Guangxi Department of Commerce</td>
+      <td>广西商务厅</td>
+      <td>South Korea</td>
+      <td>Economic Development, International Relations/Exchange, Trade</td>
+      <td>Guangxi</td>
+      <td>2018-10-19</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Korea Institute for International Economic Policy</td>
       <td>韩国对外经济政策研究院</td>
       <td>Beijing Development and Reform Commission</td>
@@ -3167,6 +3189,17 @@
       <td>Tibet</td>
       <td>2017-06-06</td>
       <td>Tibet</td>
+    </tr>
+    <tr>
+      <td>Nordic Sustainable Development Association</td>
+      <td>北欧可持续发展协会</td>
+      <td>Hunan Department of Science and Technology</td>
+      <td>科技厅</td>
+      <td>Sweden</td>
+      <td>Economic Development, Environment</td>
+      <td>Hunan</td>
+      <td>2018-10-25</td>
+      <td>Hunan</td>
     </tr>
     <tr>
       <td>North American Chinese Society of Automotive Engineers</td>
@@ -3763,6 +3796,17 @@
       <td>Shanghai</td>
     </tr>
     <tr>
+      <td>Silver Lining Foundation</td>
+      <td>云彩行动有限公司</td>
+      <td>Guangxi Department of Civil Affairs</td>
+      <td>广西壮族自治区民政厅</td>
+      <td>Hong Kong</td>
+      <td>Migrants, Poverty Alleviation, Youth</td>
+      <td>Guangxi</td>
+      <td>2018-10-19</td>
+      <td>Guangxi</td>
+    </tr>
+    <tr>
       <td>Singapore International Arbitration Centre (SIAC)</td>
       <td>新加坡国际仲裁中心</td>
       <td>Shanghai Commission of Commerce</td>
@@ -4069,6 +4113,17 @@
       <td>Chongqing</td>
       <td>2018-04-24</td>
       <td>Chongqing, Guizhou, Sichuan, Yunnan</td>
+    </tr>
+    <tr>
+      <td>Thai-Chinese Human Resources Exchange Association</td>
+      <td>泰中人才交流协会</td>
+      <td>Hunan Department of Commerce</td>
+      <td>湖南省商务厅</td>
+      <td>Thailand</td>
+      <td>Arts and Culture, Economic Development, Education, International Relations/Exchange, Trade</td>
+      <td>Hunan</td>
+      <td>2018-10-25</td>
+      <td>Hunan</td>
     </tr>
     <tr>
       <td>Thailand-China Eastern Alliance Trade Promotion Council</td>
