--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -408,6 +408,17 @@
       <td>Chongqing</td>
     </tr>
     <tr>
+      <td>BSK International</td>
+      <td>德国BSK国际教育机构</td>
+      <td>Fujian Department of Education</td>
+      <td>福建省教育厅</td>
+      <td>Germany</td>
+      <td>Education, International Relations/Exchange</td>
+      <td>Fujian</td>
+      <td>2018-10-30</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Busan Economic Promotion Agency</td>
       <td>韩国釜山经济振兴院</td>
       <td>Shandong Department of Commerce</td>
@@ -419,7 +430,7 @@
       <td>Shandong</td>
     </tr>
     <tr>
-      <td>Butterfly Children's Hospices</td>
+      <td>Butterfly Children’s Hospices</td>
       <td>蝴蝶慈善基金会有限公司</td>
       <td>Hunan Department of Civil Affairs</td>
       <td>湖南省民政厅</td>
@@ -683,17 +694,6 @@
       <td>Yunnan</td>
     </tr>
     <tr>
-      <td>China Cross-Strait Exchange Association</td>
-      <td>中华两岸交流协会</td>
-      <td>Jiangsu Department of Commerce</td>
-      <td>商务厅</td>
-      <td>Taiwan</td>
-      <td>Agriculture, Arts and Culture, Civil Society Capacity-Building, Education, International Relations/Exchange, Religion, Technology, Tourism, Trade</td>
-      <td>Jiangsu</td>
-      <td>2018-08-01</td>
-      <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Guizhou, Hainan, Jiangsu, Jiangxi, Jilin, Shaanxi, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
-    </tr>
-    <tr>
       <td>China Kind Fund</td>
       <td>中华爱心基金会</td>
       <td>State Ethnic Affairs Commission</td>
@@ -881,6 +881,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Chinese Cross Strait Interchange Association</td>
+      <td>中华两岸交流协会</td>
+      <td>Jiangsu Department of Commerce</td>
+      <td>商务厅</td>
+      <td>Taiwan</td>
+      <td>Agriculture, Arts and Culture, Civil Society Capacity-Building, Education, International Relations/Exchange, Religion, Technology, Tourism, Trade</td>
+      <td>Jiangsu</td>
+      <td>2018-08-01</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Guizhou, Hainan, Jiangsu, Jiangxi, Jilin, Shaanxi, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Chinese Cross-Straits Trade Association</td>
       <td>台湾中华两岸贸易协会</td>
       <td>Fujian Department of Commerce</td>
@@ -892,7 +903,7 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>Chinese General Chamber of Commerce</td>
+      <td>Chinese General Chamber of Commerce, Hong Kong</td>
       <td>香港中华总商会</td>
       <td>Guangdong Department of Commerce</td>
       <td>广东省商务厅</td>
@@ -1233,7 +1244,7 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>Education and Science Society, Inc.</td>
+      <td>Education and Science Society</td>
       <td>科技教育协会</td>
       <td>Hunan Department of Education</td>
       <td>湖南省教育厅</td>
@@ -1508,7 +1519,7 @@
       <td>Beijing, Hebei</td>
     </tr>
     <tr>
-      <td>General Union of Neighbors' Association of Macau</td>
+      <td>General Union of Neighbors’ Association of Macau</td>
       <td>澳门街坊会联合总会</td>
       <td>Guangdong Department of Civil Affairs</td>
       <td>广东省民政厅</td>
