--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -111,17 +111,6 @@
       <td>Beijing, Chongqing, Fujian, Guangdong, Hainan, Hebei, Henan, Hubei, Hunan, Jiangsu, Liaoning, Qinghai, Shaanxi, Shandong, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
-      <td>African General Chamber of Commerce in China</td>
-      <td>中国-非洲总商会</td>
-      <td>Beijing Commission of Commerce</td>
-      <td>北京市商务委员会</td>
-      <td>Madagascar</td>
-      <td>Trade</td>
-      <td>Beijing</td>
-      <td>2017-11-30</td>
-      <td>Beijing</td>
-    </tr>
-    <tr>
       <td>Agriterra</td>
       <td>荷兰农民生产者协会</td>
       <td>Chongqing Agriculture Commission</td>
@@ -329,6 +318,28 @@
       <td>Beijing</td>
       <td>2017-12-14</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Association Generale Chine-Afrique</td>
+      <td>中国-非洲总商会</td>
+      <td>Beijing Commission of Commerce</td>
+      <td>北京市商务委员会</td>
+      <td>Madagascar</td>
+      <td>Trade</td>
+      <td>Beijing</td>
+      <td>2017-11-30</td>
+      <td>Beijing</td>
+    </tr>
+    <tr>
+      <td>Association Generale Chine-Afrique</td>
+      <td>中国-非洲总商会</td>
+      <td>Liaoning Department of Commerce</td>
+      <td>辽宁省商务厅</td>
+      <td>Madagascar</td>
+      <td>NaN</td>
+      <td>Liaoning</td>
+      <td>2018-11-13</td>
+      <td>Liaoning</td>
     </tr>
     <tr>
       <td>Australia-China Economic Culture And Technology Development Cooperation</td>
