--- a/monthly/RObyAOOchoro.html
+++ b/monthly/RObyAOOchoro.html
@@ -282,7 +282,7 @@
     });
     d3.select("body").append("div")
     .attr("class", "tooltip1")
-    .html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>Only provinces that have registered foreign NGO representative offices are shown here.</li><li>This map does not include Xinjiang Bingtuan, which is in the permitted operating area of four foreign NGO representative offices as of November 21, 2018.</li></ul></em>");
+    .html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>This map does not include any representative offices that are permitted to work in all of China.</li><li>This map does not include Xinjiang Bingtuan, which is in the permitted operating area of four foreign NGO representative offices as of November 21, 2018.</li></ul></em>");
 
 
 
