--- a/monthly/RObyAOO.html
+++ b/monthly/RObyAOO.html
@@ -258,5 +258,5 @@ d3.select("input").on("change", change);
 });
 d3.select("body").append("div")
 .attr("class", "tooltip")
-.html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>Only provinces that have registered foreign NGO representative offices are shown here.</li></ul></em>");
+.html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>Only provinces that have registered foreign NGO representative offices are shown here.</li><li>This map does not include any representative offices that are permitted to work in all of China.</li></ul></em>");
 </script>
