--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -353,6 +353,17 @@
       <td>Hunan</td>
     </tr>
     <tr>
+      <td>Australia-Chongqing Chamber of Commerce</td>
+      <td>澳大利亚重庆商会</td>
+      <td>Chongqing Commission of Commerce</td>
+      <td>重庆市商务委</td>
+      <td>Australia</td>
+      <td>Trade</td>
+      <td>Chongqing</td>
+      <td>2018-11-27</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Austrian Chinese Business Association</td>
       <td>澳中商业协会</td>
       <td>Hebei Department of Commerce</td>
@@ -564,17 +575,6 @@
     <tr>
       <td>Casa Ricci Social Services</td>
       <td>利玛窦社会服务基金会</td>
-      <td>Yunnan Health and Family Planning Commission</td>
-      <td>云南省卫生和计划生育委员会</td>
-      <td>Macau</td>
-      <td>Health, Youth</td>
-      <td>Yunnan</td>
-      <td>2017-04-10</td>
-      <td>Yunnan</td>
-    </tr>
-    <tr>
-      <td>Casa Ricci Social Services</td>
-      <td>利玛窦社会服务基金会</td>
       <td>Sichuan Health and Family Planning Commission</td>
       <td>四川省卫生和计划生育委员会</td>
       <td>Macau</td>
@@ -582,6 +582,17 @@
       <td>Sichuan</td>
       <td>2018-07-24</td>
       <td>Sichuan</td>
+    </tr>
+    <tr>
+      <td>Casa Ricci Social Services</td>
+      <td>利玛窦社会服务基金会</td>
+      <td>Yunnan Health and Family Planning Commission</td>
+      <td>云南省卫生和计划生育委员会</td>
+      <td>Macau</td>
+      <td>Health, Youth</td>
+      <td>Yunnan</td>
+      <td>2017-04-10</td>
+      <td>Yunnan</td>
     </tr>
     <tr>
       <td>Caterpillar Foundation</td>
