--- a/piece/RObyAOO/RObyAOO_201811.html
+++ b/piece/RObyAOO/RObyAOO_201811.html
@@ -258,5 +258,5 @@ d3.select("input").on("change", change);
 });
 d3.select("body").append("div")
 .attr("class", "tooltip")
-.html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>Figures showing the number representative offices permitted to work in &ldquo;All of China&rdquo; are not included in individual province totals.</li></ul></em>");
+.html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>Representative offices permitted to work in &ldquo;All of China&rdquo; are not included in individual province totals.</li></ul></em>");
 </script>
