--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -738,6 +738,17 @@
       <td>Yunnan</td>
     </tr>
     <tr>
+      <td>China Care Fund Limited</td>
+      <td>培苗行动有限公司</td>
+      <td>Guangdong Department of Education</td>
+      <td>广东省教育厅</td>
+      <td>Hong Kong</td>
+      <td>Education, Poverty Alleviation, Youth</td>
+      <td>Guangdong</td>
+      <td>2018-12-03</td>
+      <td>Gansu, Guangdong, Guangxi, Qinghai, Yunnan</td>
+    </tr>
+    <tr>
       <td>China Kind Fund</td>
       <td>中华爱心基金会</td>
       <td>State Ethnic Affairs Commission</td>
@@ -1142,6 +1153,17 @@
       <td>Trade</td>
       <td>Shanghai</td>
       <td>2017-11-27</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Croatian National Tourist Board</td>
+      <td>克罗地亚国家旅游局</td>
+      <td>Shanghai Administration of Culture and Tourism</td>
+      <td>上海市旅游局</td>
+      <td>Croatia</td>
+      <td>Economic Development, Tourism, Trade</td>
+      <td>Shanghai</td>
+      <td>2018-12-10</td>
       <td>China</td>
     </tr>
     <tr>
@@ -3917,6 +3939,28 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Social Workers Across Borders</td>
+      <td>无国界社工有限公司</td>
+      <td>Hubei Province Department of Civil Affairs</td>
+      <td>湖北省民政厅</td>
+      <td>Hong Kong</td>
+      <td>Aging, Civil Society Capacity-Building</td>
+      <td>Hubei</td>
+      <td>2018-12-05</td>
+      <td>Hubei</td>
+    </tr>
+    <tr>
+      <td>Sociedad Central de Beneficencia China</td>
+      <td>中华通惠总局</td>
+      <td>Guangdong Office of Overseas Chinese Affairs</td>
+      <td>广东省人民政府侨务办公室</td>
+      <td>Peru</td>
+      <td>Aging, Arts and Culture, Civil Society Capacity-Building, Education, International Relations/Exchange, Poverty Alleviation</td>
+      <td>Guangdong</td>
+      <td>2018-12-17</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Software Alliance</td>
       <td>商业软件联盟</td>
       <td>National Copyright Administration</td>
@@ -4225,7 +4269,7 @@
       <td>Sichuan</td>
     </tr>
     <tr>
-      <td>The CEO Foundation</td>
+      <td>CEO Foundation</td>
       <td>主流梦工场基金</td>
       <td>Henan Department of Education</td>
       <td>河南省教育厅</td>
@@ -4236,7 +4280,7 @@
       <td>Henan</td>
     </tr>
     <tr>
-      <td>The International Association Volunteers</td>
+      <td>International Association Volunteers</td>
       <td>国际志愿者协会</td>
       <td>Hainan Department of Civil Affairs</td>
       <td>海南省民政厅</td>
@@ -4468,7 +4512,7 @@
     </tr>
     <tr>
       <td>USA China Entrepreneurs Association (Beijing)</td>
-      <td>主要从事中美间经贸交流、投资合作以及企业咨询等国际商务业务在中国境内的联络、推广与促进工作。\n负责美国中国企业家协会业务范围内相关企业投资、贸易、企业咨询等国际商务业务在中国境内的联络、推广与促进工作。</td>
+      <td>美国中国企业家协会</td>
       <td>Beijing Commission of Commerce</td>
       <td>北京市商务委员会</td>
       <td>United States</td>
