--- a/monthly/RObyAOO.html
+++ b/monthly/RObyAOO.html
@@ -14,11 +14,11 @@ body {
   shape-rendering: crispEdges;
 }
 .bar {
-  fill: #a30021;
+  fill: #128aba;
   fill-opacity: .9;
 }
 .bar:hover {
-  fill: #3d000c ;
+  fill: #20b0e9 ;
 }
 .x.axis path {
   display: none;
@@ -180,7 +180,7 @@ var tip = d3.tip()
   .attr('class', 'd3-tip')
   .offset([-10, 0])
   .html(function(d) {
-    return "Number of Representative" + "<br>" + "Offices Permitted to Work" + "<br>" + " in " + d.Province + ": <span style='color:#ff0032'>" + d.offices + "</span>" + "<br>" ;
+    return "Number of Representative" + "<br>" + "Offices Permitted to Work" + "<br>" + " in " + d.Province + ": <span style='color:#128aba'>" + d.offices + "</span>" + "<br>" ;
   })
 var svg = d3.select("body").append("svg")
     .attr("width", width + margin.left + margin.right)
@@ -258,5 +258,5 @@ d3.select("input").on("change", change);
 });
 d3.select("body").append("div")
 .attr("class", "tooltip")
-.html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>Only provinces that have registered foreign NGO representative offices are shown here.</li><li>This chart does not include any representative offices that are permitted to work in all of China.</li></ul></em>");
+.html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>Representative offices permitted to work in &ldquo;All of China&rdquo; are not included in individual province totals.</li></ul></em>");
 </script>
