--- a/monthly/RObyAOOchoro.html
+++ b/monthly/RObyAOOchoro.html
@@ -146,7 +146,7 @@
   <body>
 
     <div id="wrapper">
-    <div id="header"><h1>Map of Representative Offices by Permitted Area(s) of Operation, January 2017-October 2018</h1></div>
+    <div id="header"><h1>Map of Representative Offices by Permitted Area(s) of Operation, January 2017-November 2018</h1></div>
     <div id='mapdiv'></div>
     </div>
 
@@ -166,7 +166,7 @@
     var legend_labels = ["< 25", "25-49", "50-74", "75-99", "100-124", "≥ 125"]
     var color = d3.scale.threshold()
     .domain(color_domain)
-    .range(["#ffc2ce", "#ff708d", "#ff1f4b", "#cc0029", "#7a0018", "#290008"]);
+    .range(["#c7ebf9", "#7dd1f2", "#33b7eb", "#128aba", "#0b536f", "#041c25"]);
 
 
     var div = d3.select("body").append("div")
@@ -282,7 +282,7 @@
     });
     d3.select("body").append("div")
     .attr("class", "tooltip1")
-    .html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>This map does not include any representative offices that are permitted to work in all of China.</li><li>This map does not include Xinjiang Bingtuan, which is in the permitted operating area of four foreign NGO representative offices as of November 21, 2018.</li></ul></em>");
+    .html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>This map does not include any representative offices that are permitted to work in all of China.</li><li>This map does not include Xinjiang Bingtuan, which is in the permitted operating area of four foreign NGO representative offices as of November 30, 2018.</li></ul></em>");
 
 
 
