--- a/monthly/RObyAOOchoro.html
+++ b/monthly/RObyAOOchoro.html
@@ -146,7 +146,7 @@
   <body>
 
     <div id="wrapper">
-    <div id="header"><h1>Map of Representative Offices by Permitted Area(s) of Operation, January 2017-November 2018</h1></div>
+    <div id="header"><h1>Representative Offices by Permitted Area(s) of Operation, January 2017-November 2018</h1></div>
     <div id='mapdiv'></div>
     </div>
 
